--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "packageManager": "yarn@2.3.3",
   "scripts": {
     "dev": "vite",
+    "dev:server": "nodemon ./server/index.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
@@ -36,9 +37,11 @@
     "@mdx-js/mdx": "^2.1.5",
     "@mdx-js/rollup": "^2.1.2",
     "@monaco-editor/react": "^4.4.6",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@teensy/logger": "link:/Users/fatalv1rus/dev/teensy-logger",
     "@types/jest": "^27.5.0",
     "@types/mdx": "^2.0.2",
     "@types/mdx-js__react": "^1.5.5",
@@ -48,6 +51,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "happy-dom": "^6.0.4",
     "history": "^5.3.0",
     "jest": "^28.1.0",
@@ -63,7 +67,6 @@
     "refractor": "^4.8.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
-    "rehype-shiki": "^0.0.9",
     "rehype-slug": "^5.0.1",
     "rehype-slug-custom-id": "^1.1.0",
     "remark-code-frontmatter": "^1.0.0",
@@ -75,7 +78,9 @@
     "remark-prism": "^1.3.6",
     "remark-toc": "^8.0.1",
     "rollup": "^2.78.1",
+    "stripe": "^11.7.0",
     "tailwindcss": "^3.2.4",
+    "teensy-logger": "link:Users/fatalv1rus/dev/teensy-logger",
     "unified": "^10.1.2",
     "yarn": "^1.22.19"
   },
@@ -86,9 +91,13 @@
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.3",
     "@types/react-router-dom": "^5.3.3",
@@ -107,6 +116,7 @@
     "husky": "^8.0.1",
     "jsdom": "^20.0.3",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^28.0.5",
