--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "autoprefixer": "^10.4.8",
     "babel-plugin-prismjs": "^2.1.0",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "happy-dom": "^6.0.4",
@@ -63,7 +64,7 @@
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.7.0",
     "refractor": "^4.8.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
@@ -96,6 +97,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.15",
