general cleanup and inclusion of stripe types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,14 @@
       "vitest/globals"
     ]
   },
-  "include": ["./src", "**/*.ts", "**/*.tsx", "**/*.d.ts", "./server/*.ts"],
+  "include": [
+    "./src",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.d.ts",
+    "./server/*.ts",
+    "./types/stripe.d.ts"
+  ],
   "exclude": ["node_modules"],
   "ts-node": {
     "esm": true,
